update all pages

--- a/interiorFitOut.html
+++ b/interiorFitOut.html
@@ -31,40 +31,19 @@
                             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
 
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">
-                                about us
-                            </a>
-                            <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="about-us.html">vision and mission </a>
-                                <a class="dropdown-item" href="portfolio.html">portfolio </a>
-                                <Ul>
-
-                                    <Li class="nav-item dropdown oo">
-                                        <a class="nav-link dropdown-toggle" href="#" id="Dropdownss" role="button"
-                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            our team
-                                        </a>
-                                        <div class="items-transtion dropitemss" aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="#">managers </a>
-                                            <a class="dropdown-item" href="#">organization chart</a>
-                                            <a class="dropdown-item" href="#">technical team </a>
-                                        </div>
-                                    </Li>
-                                </Ul>
-                            </div>
-                        </li>
+                        <li class="nav-item ">
+                                <a class="nav-link " href="about-us.html" >
+                                    about us
+                                </a>
+                            </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
                                 maitenance
                             </a>
                             <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">planning </a>
-                                <a class="dropdown-item" href="#">services </a>
-                                <a class="dropdown-item" href="#">scope of work </a>
-                                <a class="dropdown-item" href="#">maintenance project </a>
+                                <a class="dropdown-item" href="services.html">services </a>
+                                <a class="dropdown-item" href="portfolio.html">maintenance project </a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
@@ -80,17 +59,10 @@
                         <li class="nav-item">
                             <a class="nav-link" href="design.html">design</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">
-                                internal fit out
+                        <li class="nav-item">
+                            <a class="nav-link " href="interiorFitOut.html">
+                                interior fit out
                             </a>
-                            <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">interior construction </a>
-                                <a class="dropdown-item" href="#">interior design </a>
-                                <a class="dropdown-item" href="#">scope of work </a>
-                                <a class="dropdown-item" href="#">repairing and maintenance </a>
-                            </div>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#footer-section">contact us</a>
@@ -118,9 +90,9 @@
                 <div class="col-12">
                     <div class="trunkey-solution__content">
                         <div class="trunkey-solution__img">
-                            <img src="images/1.jpg" alt="">
+                            <img src="images/interiorFitOut/lauren-mancke-aOC7TSLb1o8-unsplash.jpg" alt="">
                         </div>
-                        <h2 class="mt-3 base-color">trunkey solution</h2>
+                        <h2 class="mt-3 base-color">scope of service</h2>
                         <p>
                             <span class="text-uppercase">blakstone INTERNATIONAL</span> specializes in the build, fit
                             out and refurbishment
@@ -145,9 +117,7 @@
                             solutions, providing fine marble, quality carpets and flooring as well as supplying best in
                             class tiling, glazing, joinery, painting, furniture work, lighting. MEP, ceilings &
                             partitioning, pre cast & reinforcing as well as engineering, procurement management, site
-                            supervision and project management are also offered in our turnkey package. Whatever your
-                            project requires,BLACKSTONE INTERNATIONAL will ensure it is executed on time, within
-                            budget and to the highest standards.
+                            supervision and project management are also offered in our turnkey package.
                         </p>
                         <h4>We make it our way to be hands on dynamic in handling every single detail we have on each
                             project : </h3>
@@ -175,18 +145,17 @@
         </div>
     </section>
     <!-- end trunkey solution section -->
-
     <!-- start interion desgin -->
     <section class="interion-desgin__section ">
         <div class="container-fluid no-gutters p-0">
             <div class="row no-gutters">
                 <div class="col-md-6">
-                    <img src="images/interiorFitOut/gallery3.jpg" alt="">
+                    <img src="images/interiorFitOut/gallery3.jpg" class="h-100" alt="">
                 </div>
                 <div class="col-md-6">
                     <div class="interion-desgin h-100 w-100 pt-3">
                         <div class="overlay"></div>
-                        <div class="interion-desgin__content mt-5 ml-4">
+                        <div class="interion-desgin__content mt-5 ml-4 mb-5 mb-md-0">
                             <h2 class=" pb-3 base-color">interior design</h2>
 
                             <ul class="white-color ml-4">
@@ -240,7 +209,7 @@
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <img src="images/interiorFitOut/rsz_1repair-removebg-preview_122.png" class="h-100" alt="">
+                    <img src="images/interiorFitOut/repair2.png" class="h-100" alt="">
                 </div>
                 <div class="col-md-4">
                     <ul class="list-unstyled mt-3">
@@ -268,35 +237,6 @@
         </div>
     </section>
     <!-- end repairing and maintenance -->
-    <!-- start -->
-    <!-- <section id="interior-construction">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-8 ">
-                            <ul class="list-unstyled">
-                                <li class="col-4">
-                                    <span></span>
-                                    <p>partitioning</p>
-                                </li>
-                                <li class="col-4">
-                                    <span></span>
-                                    <p>partitioning</p>
-                                </li>
-                                <li class="col-4">
-                                    <span></span>
-                                    <p>partitioning</p>
-                                </li>
-                                <li class="col-4">
-                                    <span></span>
-                                    <p>partitioning</p>
-                                </li>
-                                
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </section> -->
-    <!-- end -->
     <!-- start footer -->
     <footer id="footer-section" class="sections_padding">
         <div class="container">
@@ -314,27 +254,29 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="footer-links pt-4">
-                        <h3 class="pb-3 white-color">useful links</h3>
+                        <h3 class="pb-3 white-color">site map</h3>
                         <ul class="list-group list-group-flush white-color">
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                home
+                                <a href="index.html">Home</a>
                             </li>
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                about us
+                                <a href="about-us.html">about us </a>
                             </li>
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                services
+                                <a href="services.html">maintenance </a>
                             </li>
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                portofolio
+                                <a href="projectManagement.html">consultancy </a>
                             </li>
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                client
+                                <a href="interiorFitOut.html">
+                                    interior Fit Out
+                                </a>
                             </li>
                         </ul>
 
