--- a/projectManagement.html
+++ b/projectManagement.html
@@ -16,90 +16,62 @@
 <body>
     <!-- start navigationbar -->
     <header class="items-transtion">
-            <div class="container">
-                <nav class="navbar navbar-expand-lg p-0 ">
-                    <a class="navbar-brand mr-0" href="index.html">
-                        <img src="images/logo2.png" alt="">
-                    </a>
-                    <button class="navbar-toggler navbar-dark bg-dark" type="button" data-toggle="collapse" data-target="#header-navbar"
-                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-end" id="header-navbar">
-                        <ul class="navbar-nav">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                            </li>
-    
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="false">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg p-0 ">
+                <a class="navbar-brand mr-0" href="index.html">
+                    <img src="images/logo2.png" alt="">
+                </a>
+                <button class="navbar-toggler navbar-dark bg-dark" type="button" data-toggle="collapse" data-target="#header-navbar"
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="header-navbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item ">
+                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        </li>
+
+                        <li class="nav-item ">
+                                <a class="nav-link " href="about-us.html" >
                                     about us
                                 </a>
-                                <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="about-us.html">vision and mission </a>
-                                    <a class="dropdown-item" href="portfolio.html">portfolio </a>
-                                    <Ul>
-    
-                                        <Li class="nav-item dropdown oo">
-                                            <a class="nav-link dropdown-toggle" href="#" id="Dropdownss" role="button"
-                                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                our team
-                                            </a>
-                                            <div class="items-transtion dropitemss" aria-labelledby="navbarDropdown">
-                                                <a class="dropdown-item" href="#">managers </a>
-                                                <a class="dropdown-item" href="#">organization chart</a>
-                                                <a class="dropdown-item" href="#">technical team </a>
-                                            </div>
-                                        </Li>
-                                    </Ul>
-                                </div>
                             </li>
-                            <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                                        aria-haspopup="true" aria-expanded="false">
-                                        maitenance
-                                    </a>
-                                    <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="#">planning </a>
-                                        <a class="dropdown-item" href="#">services </a>
-                                        <a class="dropdown-item" href="#">scope of work </a>
-                                        <a class="dropdown-item" href="#">maintenance project </a>
-                                    </div>
-                                </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="false">
-                                    consultancy
-                                </a>
-                                <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="projectManagement.html">Project Management </a>
-                                    <a class="dropdown-item" href="costManagement.html">cost Management </a>
-                                </div>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="design.html">design</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="false">
-                                    internal fit out
-                                </a>
-                                <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="#">interior construction </a>
-                                    <a class="dropdown-item" href="#">interior design </a>
-                                    <a class="dropdown-item" href="#">scope of work </a>
-                                    <a class="dropdown-item" href="#">repairing and maintenance </a>
-                                </div>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#footer-section">contact us</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-        </header>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                maitenance
+                            </a>
+                            <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="services.html">services </a>
+                                <a class="dropdown-item" href="portfolio.html">maintenance project </a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown active">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                consultancy
+                            </a>
+                            <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="projectManagement.html">Project Management </a>
+                                <a class="dropdown-item" href="costManagement.html">cost Management </a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="design.html">design</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " href="interiorFitOut.html">
+                                interior fit out
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#footer-section">contact us</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
     <!-- end navigationbar -->
     <!-- start hero section  -->
     <section id="cost-management__hero-section" class="background-prop">
@@ -112,13 +84,12 @@
     <!-- end hero section  -->
     <!-- start project management section -->
     <section id="project-management__section" class="sections_padding">
-        <div class="line-above__header"></div>
-        <h2 class="text-center pb-3 base-color"><span>project</span> management</h2>
         <div class="container">
             <div class="row sections_padding">
                 <div class="col-md-6">
-                    <div class="project-management__content">
-                        <h2>project management</h2>
+                    <div class="project-management__content mb-4 mb-md-0">
+                            <div class="line-above__header ml-0 mr-0"></div>
+                            <h2 class="base-color"><span>project</span> management</h2>
                         <p>
                             "Blackstone International (BSI)" is an award-winning and dynamic project & cost management
                             consultancy, providing a high quality, value for money, fully tailored service to Clients
@@ -157,8 +128,9 @@
                     </div>
                 </div>
                 <div class="col-md-5">
-                    <div class="project-management__content">
-                        <h2>project program management</h2>
+                    <div class="project-management__content mt-4 mt-md-0">
+                            <div class="line-above__header ml-0 mr-0"></div>
+                            <h2 class="base-color"><span>project program</span> management</h2>
                         <p>
                             Client focus is at the core of our business, and with a firm belief in strong client
                             relations, "Blackstone International" is always prepared to go that extra mile.
@@ -181,9 +153,9 @@
             </div>
             <div class="row sections_padding">
                 <div class="col-md-6">
-                    <div class="project-management__content">
-                        <h2>planning consultancy</h2>
-
+                    <div class="project-management__content mb-4 mb-md-0">
+                            <div class="line-above__header ml-0 mr-0"></div>
+                            <h2 class="base-color"><span>planning</span> consultancy</h2>
                         <p>
                             Project planning is at the heart of the project life cycle, keeping all involved parties
                             informed as to where the project is going and how we are going to get there. We define
@@ -213,9 +185,9 @@
                     </div>
                 </div>
                 <div class="col-md-5">
-                    <div class="project-management__content">
-                        <h2>design management consultancy</h2>
-
+                    <div class="project-management__content mt-4 mt-md-0">
+                            <div class="line-above__header ml-0 mr-0"></div>
+                            <h2 class="base-color"><span>design management</span> consultancy</h2>
                         <p>
                             Our Design managers speak the language of the business and the language of design. We
                             support the culture of creativity during all design phases whilst optimizing organization
@@ -259,27 +231,29 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="footer-links pt-4">
-                        <h3 class="pb-3 white-color">useful links</h3>
+                        <h3 class="pb-3 white-color">site map</h3>
                         <ul class="list-group list-group-flush white-color">
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                home
+                                <a href="index.html">Home</a>
                             </li>
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                about us
+                                <a href="about-us.html">about us </a>
                             </li>
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                services
+                                <a href="services.html">maintenance </a>
                             </li>
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                portofolio
+                                <a href="projectManagement.html">consultancy </a>
                             </li>
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                client
+                                <a href="interiorFitOut.html">
+                                    interior Fit Out
+                                </a>
                             </li>
                         </ul>
 
