--- a/costManagement.html
+++ b/costManagement.html
@@ -27,47 +27,26 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="header-navbar">
                         <ul class="navbar-nav">
-                            <li class="nav-item active">
+                            <li class="nav-item ">
                                 <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                             </li>
     
+                            <li class="nav-item ">
+                                    <a class="nav-link " href="about-us.html" >
+                                        about us
+                                    </a>
+                                </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                                     aria-haspopup="true" aria-expanded="false">
-                                    about us
+                                    maitenance
                                 </a>
                                 <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="about-us.html">vision and mission </a>
-                                    <a class="dropdown-item" href="portfolio.html">portfolio </a>
-                                    <Ul>
-    
-                                        <Li class="nav-item dropdown oo">
-                                            <a class="nav-link dropdown-toggle" href="#" id="Dropdownss" role="button"
-                                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                our team
-                                            </a>
-                                            <div class="items-transtion dropitemss" aria-labelledby="navbarDropdown">
-                                                <a class="dropdown-item" href="#">managers </a>
-                                                <a class="dropdown-item" href="#">organization chart</a>
-                                                <a class="dropdown-item" href="#">technical team </a>
-                                            </div>
-                                        </Li>
-                                    </Ul>
+                                    <a class="dropdown-item" href="services.html">services </a>
+                                    <a class="dropdown-item" href="portfolio.html">maintenance project </a>
                                 </div>
                             </li>
-                            <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                                        aria-haspopup="true" aria-expanded="false">
-                                        maitenance
-                                    </a>
-                                    <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="#">planning </a>
-                                        <a class="dropdown-item" href="#">services </a>
-                                        <a class="dropdown-item" href="#">scope of work </a>
-                                        <a class="dropdown-item" href="#">maintenance project </a>
-                                    </div>
-                                </li>
-                            <li class="nav-item dropdown">
+                            <li class="nav-item dropdown active">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                                     aria-haspopup="true" aria-expanded="false">
                                     consultancy
@@ -80,17 +59,10 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="design.html">design</a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="false">
-                                    internal fit out
+                            <li class="nav-item">
+                                <a class="nav-link " href="interiorFitOut.html">
+                                    interior fit out
                                 </a>
-                                <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="#">interior construction </a>
-                                    <a class="dropdown-item" href="#">interior design </a>
-                                    <a class="dropdown-item" href="#">scope of work </a>
-                                    <a class="dropdown-item" href="#">repairing and maintenance </a>
-                                </div>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#footer-section">contact us</a>
@@ -240,27 +212,29 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="footer-links pt-4">
-                        <h3 class="pb-3 white-color">useful links</h3>
+                        <h3 class="pb-3 white-color">site map</h3>
                         <ul class="list-group list-group-flush white-color">
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                home
+                                <a href="index.html">Home</a>
                             </li>
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                about us
+                                <a href="about-us.html">about us </a>
                             </li>
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                services
+                                <a href="services.html">maintenance </a>
                             </li>
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                portofolio
+                                <a href="projectManagement.html">consultancy </a>
                             </li>
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                client
+                                <a href="interiorFitOut.html">
+                                    interior Fit Out
+                                </a>
                             </li>
                         </ul>
 
