--- a/index.html
+++ b/index.html
@@ -33,41 +33,21 @@
                             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
 
+                        <li class="nav-item ">
+                            <a class="nav-link " href="about-us.html" >
+                                about us
+                            </a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
-                                about us
+                                maitenance
                             </a>
                             <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="about-us.html">vision and mission </a>
-                                <a class="dropdown-item" href="portfolio.html">portfolio </a>
-                                <Ul>
-
-                                    <Li class="nav-item dropdown oo">
-                                        <a class="nav-link dropdown-toggle" href="#" id="Dropdownss" role="button"
-                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            our team
-                                        </a>
-                                        <div class="items-transtion dropitemss" aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="#">managers </a>
-                                            <a class="dropdown-item" href="#">organization chart</a>
-                                            <a class="dropdown-item" href="#">technical team </a>
-                                        </div>
-                                    </Li>
-                                </Ul>
+                                <a class="dropdown-item" href="services.html">services </a>
+                                <a class="dropdown-item" href="portfolio.html">maintenance project </a>
                             </div>
                         </li>
-                        <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="false">
-                                    maitenance
-                                </a>
-                                <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="#">planning </a>
-                                    <a class="dropdown-item" href="services.html">services </a>
-                                    <a class="dropdown-item" href="#">maintenance project </a>
-                                </div>
-                            </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
@@ -81,17 +61,10 @@
                         <li class="nav-item">
                             <a class="nav-link" href="design.html">design</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">
-                                internal fit out
+                        <li class="nav-item">
+                            <a class="nav-link " href="interiorFitOut.html">
+                                interior fit out
                             </a>
-                            <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">interior construction </a>
-                                <a class="dropdown-item" href="#">interior design </a>
-                                <a class="dropdown-item" href="#">scope of work </a>
-                                <a class="dropdown-item" href="#">repairing and maintenance </a>
-                            </div>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#footer-section">contact us</a>
@@ -104,46 +77,47 @@
     <!-- end navigationbar -->
     <!-- start hero section  -->
     <section id="hero-section" class="background-prop">
-        <video playsinline autoplay muted loop poster="polina.jpg" id="bgvid">
-            <source src="images/bg.mp4" type="video/mp4">
-            <source src="images/bg.mp4" type="video/ogg">
+        <video playsinline autoplay muted loop>
+            <source src="images/bg1.mp4" type="video/mp4">
+            <source src="images/bg1.mp4" type="video/ogg">
         </video>
         <div class="overlay text-center">
-            <h1 class="mb-2 first animated  animate__fadeInDown">black stone international</h1>
-            <p class="first">interior fit-out and maintenance</p>
+            <h1 class="mb-2">black stone international</h1>
+            <p class="white-color">interior fit-out and maintenance</p>
         </div>
     </section>
     <!-- end hero section  -->
-<!-- start about us section -->
-<section id="about-us__wrapper" class="sections_padding">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="about-us__content ml-md-3">
-                    <h2 class=" base-color"><span>about</span> us</h2>
-                    <!-- <span>a few words about us</span> -->
-                    <p>
-                        "Black Stone" is an award-winning and dynamic project & cost management consultancy,
-                        providing a high quality, value for money, fully tailored service to Clients across all
-                        sectors throughout the MENA region, and beyond.
-                    </p>
-                    <p>
-                        Our knowledgeable and experienced team offers fully tailored solutions that lead our
-                        Clients' projects from initial concept right though to operational handover, with continued
-                        support.
-                    </p>
-                    <a href="about-us.html" class="read-more items-transtion d-block">read more <i class="fas fa-arrow-right"></i> </a>
+    <!-- start about us section -->
+    <section id="about-us__wrapper" class="sections_padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="about-us__content ml-md-3 mb-4 mb-md-0">
+                        <h2 class=" base-color"><span>about</span> us</h2>
+                        <!-- <span>a few words about us</span> -->
+                        <p>
+                            "Black Stone" is an award-winning and dynamic project & cost management consultancy,
+                            providing a high quality, value for money, fully tailored service to Clients across all
+                            sectors throughout the MENA region, and beyond.
+                        </p>
+                        <p>
+                            Our knowledgeable and experienced team offers fully tailored solutions that lead our
+                            Clients' projects from initial concept right though to operational handover, with continued
+                            support.
+                        </p>
+                        <a href="about-us.html" class="read-more items-transtion d-block">read more <i class="fas fa-arrow-right"></i>
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-6">
-                <div class="about-us__image">
-                    <img src="images/aboutUs/aboutUs.PNG">
+                <div class="col-md-6">
+                    <div class="about-us__image w-100 h-100">
+                        <img src="images/aboutUs/aboutUs.PNG" class="h-100">
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-<!-- end about us section -->
+    </section>
+    <!-- end about us section -->
     <!-- strart our services planning -->
     <section id="service-planning" class="sections_padding">
         <div class="line-above__header"></div>
@@ -176,7 +150,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 ">
+                <div class="col-lg-3 col-md-6 mb-lg-0 mb-4">
                     <div class="service-planning__content white-color">
                         <div class="step__service-planning d-flex flex-row pt-3">
                             <i class="far fa-object-group base-color mr-2"></i>
@@ -373,93 +347,7 @@
         </div>
     </section>
     <!-- end our client section -->
-    <!-- start our team section -->
-    <section id="our-team" class="sections_padding">
-        <div class="line-above__header"></div>
-        <h2 class="text-center pb-3 base-color"><span>our</span> team</h2>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 ">
-                    <div class="mangar-info mb-5 mb-lg-0">
-                        <img src="images/mangars/manager1.PNG" alt="">
-                        <div class="mangar-name items-transtion text-center">
-                            <h5 class="mt-3">
-                                <a href="manager.html" class="items-transtion white-color">nidal ghandour</a>
-                            </h5>
-                            <p class="white-color text-capitalize">managing director</p>
-                            <p class="social-media">
-                                <a href="#" class="items-transtion">
-                                    <i class="fab fa-twitter"></i>
-                                </a>
-                                <a href="#" class="items-transtion">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                                <a href="#" class="items-transtion">
-                                    <i class="fab fa-google-plus-g"></i>
-                                </a>
-                                <a href="#" class="items-transtion">
-                                    <i class="fab fa-linkedin-in"></i>
-                                </a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="mangar-info mb-5 mb-lg-0">
-                        <img src="images/mangars/manager2.PNG" alt="">
-                        <div class="mangar-name items-transtion text-center">
-                            <h5 class="mt-3">
-                                <a href="manager.html" class="items-transtion white-color">nidal ayal</a>
-                            </h5>
-                            <p class="white-color text-capitalize">commerical director</p>
-                            <p class="social-media">
-                                <a href="#">
-                                    <i class="fab fa-twitter"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fa-google-plus-g"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fa-linkedin-in"></i>
-                                </a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="mangar-info mb-5 mb-lg-0">
-                        <img src="images/mangars/manager3.PNG" alt="">
-                        <div class="mangar-name items-transtion text-center">
-                            <h5 class="mt-3">
-                                <a href="manager.html" class="items-transtion white-color">iftekhar sayed</a>
-
-                            </h5>
-                            <p class="white-color text-capitalize">projects director</p>
-                            <p class="social-media">
-                                <a href="#">
-                                    <i class="fab fa-twitter"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fa-google-plus-g"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fa-linkedin-in"></i>
-                                </a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </section>
-    <!-- end our team section -->
+    
     <!-- website map -->
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d729.5622622558366!2d53.70349269424234!3d23.619142888380868!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e676879d867ac9d%3A0x84709ee1ea9afbbc!2sEverGreen%20fresh%20fruits%20and%20veg!5e0!3m2!1sen!2seg!4v1593290304852!5m2!1sen!2seg"
         width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
@@ -480,27 +368,29 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="footer-links pt-4">
-                        <h3 class="pb-3 white-color">useful links</h3>
+                        <h3 class="pb-3 white-color">site map</h3>
                         <ul class="list-group list-group-flush white-color">
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                home
+                                <a href="index.html">Home</a>
                             </li>
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                about us
+                                <a href="about-us.html">about us </a>
                             </li>
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                services
+                                <a href="services.html">maintenance </a>
                             </li>
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                portofolio
+                                <a href="projectManagement.html">consultancy </a>
                             </li>
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                client
+                                <a href="interiorFitOut.html">
+                                    interior Fit Out
+                                </a>
                             </li>
                         </ul>
 
