--- a/portfolio.html
+++ b/portfolio.html
@@ -29,46 +29,25 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="header-navbar">
                         <ul class="navbar-nav">
-                            <li class="nav-item active">
+                            <li class="nav-item ">
                                 <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                             </li>
     
-                            <li class="nav-item dropdown">
+                            <li class="nav-item ">
+                                    <a class="nav-link " href="about-us.html" >
+                                        about us
+                                    </a>
+                                </li>
+                            <li class="nav-item dropdown active">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                                     aria-haspopup="true" aria-expanded="false">
-                                    about us
+                                    maitenance
                                 </a>
                                 <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="about-us.html">vision and mission </a>
-                                    <a class="dropdown-item" href="portfolio.html">portfolio </a>
-                                    <Ul>
-    
-                                        <Li class="nav-item dropdown oo">
-                                            <a class="nav-link dropdown-toggle" href="#" id="Dropdownss" role="button"
-                                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                our team
-                                            </a>
-                                            <div class="items-transtion dropitemss" aria-labelledby="navbarDropdown">
-                                                <a class="dropdown-item" href="#">managers </a>
-                                                <a class="dropdown-item" href="#">organization chart</a>
-                                                <a class="dropdown-item" href="#">technical team </a>
-                                            </div>
-                                        </Li>
-                                    </Ul>
+                                    <a class="dropdown-item" href="services.html">services </a>
+                                    <a class="dropdown-item" href="portfolio.html">maintenance project </a>
                                 </div>
                             </li>
-                            <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                                        aria-haspopup="true" aria-expanded="false">
-                                        maitenance
-                                    </a>
-                                    <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="#">planning </a>
-                                        <a class="dropdown-item" href="#">services </a>
-                                        <a class="dropdown-item" href="#">scope of work </a>
-                                        <a class="dropdown-item" href="#">maintenance project </a>
-                                    </div>
-                                </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                                     aria-haspopup="true" aria-expanded="false">
@@ -82,17 +61,10 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="design.html">design</a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="false">
-                                    internal fit out
+                            <li class="nav-item">
+                                <a class="nav-link " href="interiorFitOut.html">
+                                    interior fit out
                                 </a>
-                                <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="#">interior construction </a>
-                                    <a class="dropdown-item" href="#">interior design </a>
-                                    <a class="dropdown-item" href="#">scope of work </a>
-                                    <a class="dropdown-item" href="#">repairing and maintenance </a>
-                                </div>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#footer-section">contact us</a>
@@ -106,10 +78,10 @@
     <!-- start hero section  -->
     <section id="hero-portfolio__section" class="background-prop">
         <div class="overlay"></div>
-        <!-- <div class="hero-section__content text-center"> -->
-            <!-- <h1 class="mb-2 ">about us</h1> -->
+        <div class="hero-section__content text-center">
+            <h1 class="mb-2 ">project</h1>
             <!-- <p>about company</p> -->
-        <!-- </div> -->
+        </div>
     </section>
     <!-- end hero section  -->
     <!-- start portfolio -->
@@ -276,27 +248,29 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="footer-links pt-4">
-                        <h3 class="pb-3 white-color">useful links</h3>
+                        <h3 class="pb-3 white-color">site map</h3>
                         <ul class="list-group list-group-flush white-color">
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                home
+                                <a href="index.html">Home</a>
                             </li>
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                about us
+                                <a href="about-us.html">about us </a>
                             </li>
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                services
+                                <a href="services.html">maintenance </a>
                             </li>
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                portofolio
+                                <a href="projectManagement.html">consultancy </a>
                             </li>
                             <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
-                                client
+                                <a href="interiorFitOut.html">
+                                    interior Fit Out
+                                </a>
                             </li>
                         </ul>
 
